<resources>
    <string name="app_name">RegistrationActivity</string>
    <string name="registration_form">Registration Form</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="submit">Submit</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_4_hobbies">Enter Your 4 hobbies</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="other">Other</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="your_details">Your Details</string>
</resources>